fix: correct Bluesky handle to rmendes.net

--- a/indiekit.config.js.template
+++ b/indiekit.config.js.template
@@ -66,6 +66,6 @@ export default {
   // BLUESKY: Add BLUESKY_PASSWORD to env.sh, then uncomment:
   // ============================================================
   // "@indiekit/syndicator-bluesky": {
-  //   handle: "rmdes.bsky.social",
+  //   handle: "rmendes.net",
   // },
 };
