feat: add all post-types (audio, event, jam, repost, rsvp, video)

--- a/indiekit.config.js.template
+++ b/indiekit.config.js.template
@@ -24,11 +24,17 @@ export default {
     "@indiekit/endpoint-json-feed",
     "@indiekit/endpoint-github",
     "@indiekit/post-type-article",
+    "@indiekit/post-type-audio",
+    "@indiekit/post-type-bookmark",
+    "@indiekit/post-type-event",
+    "@indiekit/post-type-jam",
+    "@indiekit/post-type-like",
     "@indiekit/post-type-note",
     "@indiekit/post-type-photo",
-    "@indiekit/post-type-bookmark",
     "@indiekit/post-type-reply",
-    "@indiekit/post-type-like",
+    "@indiekit/post-type-repost",
+    "@indiekit/post-type-rsvp",
+    "@indiekit/post-type-video",
   ],
 
   // Local file storage - persisted in /app/data/content
