feat: add keybase.txt endpoint + update h-card submodule
- nginx serves /.well-known/keybase.txt from /app/data/config/
- h-card now supports full microformat properties

--- a/nginx.conf
+++ b/nginx.conf
@@ -280,6 +280,12 @@ http {
             return 200 'did:plc:tk6bkjdozskzgb47umfelfpq';
         }
 
+        # Keybase verification file (stored in /app/data/config/, not committed to repo)
+        location = /.well-known/keybase.txt {
+            alias /app/data/config/keybase.txt;
+            default_type text/plain;
+        }
+
         # Well-known endpoints (webfinger, etc.)
         location /.well-known/ {
             proxy_pass http://127.0.0.1:8080;
